--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
       <title>FORMS</title> 
       <link rel="stylesheet" href="contactform.css">
+      <meta name="viewport" content="width=device-width">
     </head>
     <body>
       <form method="POST" action="contactform.php">
